--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "ss007",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
